# DFX5_Diners_MLOPS

./: .gitignore  README.md
.github/: pull_request_template.md
.github/scripts/: cluster_base.json  configure_artifacts.sh
.github/workflows/: cd_template.yaml
src/: pyproject.toml
src/logs_eda/lambda_eda_s3_eventbridge/: eda.py  eda_logs.ipynb  lambda_function.py  samconfig.toml  template.yaml
src/logs_eda/lambda_eda_s3_kafka/: eda.py  eda_logs.ipynb  lambda_function.py  template.yaml
src/logs_eda/lambda_eda_s3_kafka/.aws-sam/: build.toml
src/recsys/: MLproject  conda.yaml  main.py
